[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/default_die/Dice 1.png" type="Texture" id=1]
[ext_resource path="res://assets/right.png" type="Texture" id=2]
[ext_resource path="res://assets/left.png" type="Texture" id=3]
[ext_resource path="res://scenes/TextureSelector.gd" type="Script" id=4]
[ext_resource path="res://shader/simple_die_roll.shader" type="Shader" id=5]
[ext_resource path="res://shader/simple_die_roll_2.shader" type="Shader" id=6]
[ext_resource path="res://assets/showtime-font/Showtime-R9Ke.ttf" type="DynamicFontData" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/progress = null
shader_param/right = false
shader_param/left = false
shader_param/up = false
shader_param/down = false

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/progress = null
shader_param/right = false
shader_param/left = false
shader_param/up = false
shader_param/down = false

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ButtonLeft" type="Button" parent="."]
margin_right = 534.0
margin_bottom = 518.0
rect_scale = Vector2( 0.15, 0.15 )
text = "<"
icon = ExtResource( 3 )

[node name="ButtonRight" type="Button" parent="."]
margin_left = 240.0
margin_right = 774.0
margin_bottom = 518.0
rect_scale = Vector2( 0.15, 0.15 )
text = ">"
icon = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 160, 36 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 160, 36 )
texture = ExtResource( 1 )

[node name="ButtonConfirm" type="Button" parent="."]
margin_left = 46.0
margin_top = 93.0
margin_right = 274.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 3 )
text = "Set Die Colour"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="ButtonLeft" to="." method="_on_ButtonLeft_button_down"]
[connection signal="button_down" from="ButtonRight" to="." method="_on_ButtonRight_button_down"]
[connection signal="pressed" from="ButtonConfirm" to="." method="_on_ConfirmButton_pressed"]
